# xchecker-dev

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  fix-locks.ps1  flake.nix  justfile  temp_parse.txt  temp_read.txt
.github/: PULL_REQUEST_TEMPLATE.md
.jules/: bolt.md  palette.md  sentinel.md
.kiro/: README.md  ROADMAP.md  ROADMAP_V11-V18_INTEGRATION.md
.xchecker/: README.md
crates/xchecker-benchmark/: Cargo.toml
crates/xchecker-benchmark/src/: lib.rs
crates/xchecker-cli/: Cargo.toml
crates/xchecker-cli/src/: lib.rs
crates/xchecker-config/: Cargo.toml
crates/xchecker-config/src/: config.rs  lib.rs
crates/xchecker-config/src/config/: builder.rs  cli_args.rs  discovery.rs  mod.rs  model.rs  selectors.rs  sources.rs  validation.rs
crates/xchecker-doctor/: Cargo.toml
crates/xchecker-doctor/src/: lib.rs  wsl.rs
crates/xchecker-engine/: Cargo.toml
crates/xchecker-engine/.xchecker/: config.toml
crates/xchecker-engine/.xchecker/cache/: 0b4d4742e66fee6facd28afbfe95ee0c0e5618c754d70dde6ce4681947953c25_requirements.json  11b56ff275cf1e781f2999899d14769afbae379f649e775057c7effc58fe5db2_requirements.json  825528ad2c8438d1dcce7ec806fb69f277e16eb441af37a823fdd1dff6699347_requirements.json  97d798c19475a925dc58b435b786582fb4a0f36cfce27837397ca33ffc656b2a_requirements.json  a00800d207e933927ff364322422666dd89a0d1b7efc5210a1aa8febae9a619d_requirements.json  a11c8e1e7d58f7d477f2f48c197f96473eb29429a4074a8963e59bf17540e939_requirements.json  a46cec772b349c798bace518bdc657440114b2855f3aca6b0ca8ff99ffd08aa6_requirements.json  d4a3efc6a58f3921045057f87db93a63e012a28b78690f7c39368d4b9687d723_requirements.json  e3c7aff7bdb15a6cf2a3f4254459bbac3f56d512028ec11a7c068eec14a7915c_requirements.json
crates/xchecker-engine/src/: benchmark.rs  doctor.rs  example_generators.rs  extraction.rs  fixup.rs  gate.rs  hooks.rs  integration_tests.rs  lib.rs  phase.rs  phases.rs  receipt.rs  status.rs  validation.rs  wsl.rs
crates/xchecker-engine/src/fixup/: apply.rs  match_context.rs  mod.rs  model.rs  parse.rs  paths.rs  phase.rs  report.rs
crates/xchecker-engine/src/orchestrator/: handle.rs  llm.rs  mod.rs  phase_exec.rs  workflow.rs
crates/xchecker-engine/src/packet/: budget.rs  builder.rs  mod.rs  model.rs  render.rs  selectors.rs
crates/xchecker-engine/src/receipt/: emit.rs  errors.rs  hash.rs  mod.rs  model.rs  tests.rs  writer.rs
crates/xchecker-error-reporter/: Cargo.toml
crates/xchecker-error-reporter/src/: lib.rs
crates/xchecker-extraction/: Cargo.toml
crates/xchecker-extraction/src/: lib.rs
crates/xchecker-fixup-model/: Cargo.toml
crates/xchecker-fixup-model/src/: lib.rs
crates/xchecker-gate/: Cargo.toml
crates/xchecker-gate/src/: command.rs  exit_codes.rs  json.rs  lib.rs  paths.rs  pending_fixups.rs  policy.rs  types.rs
crates/xchecker-hooks/: Cargo.toml
crates/xchecker-hooks/src/: lib.rs
crates/xchecker-llm/: Cargo.toml
crates/xchecker-llm/src/: anthropic_backend.rs  budgeted_backend.rs  claude_cli.rs  gemini_cli.rs  http_client.rs  lib.rs  openrouter_backend.rs  types.rs
crates/xchecker-lock/: Cargo.toml
crates/xchecker-lock/src/: lib.rs
crates/xchecker-orchestrator/: Cargo.toml
crates/xchecker-orchestrator/src/: handle.rs  lib.rs  llm.rs  mod.rs  phase_exec.rs  workflow.rs
crates/xchecker-packet/: Cargo.toml
crates/xchecker-packet/src/: budget.rs  builder.rs  lib.rs  model.rs  render.rs  selectors.rs
crates/xchecker-phase-api/: Cargo.toml
crates/xchecker-phase-api/src/: lib.rs
crates/xchecker-phases/: Cargo.toml
crates/xchecker-phases/src/: lib.rs
crates/xchecker-prompt-template/: Cargo.toml
crates/xchecker-prompt-template/src/: lib.rs
crates/xchecker-receipt/: Cargo.toml
crates/xchecker-receipt/src/: emit.rs  errors.rs  hash.rs  model.rs  tests.rs  writer.rs
crates/xchecker-redaction/: Cargo.toml
crates/xchecker-redaction/src/: lib.rs
crates/xchecker-runner/: Cargo.toml
crates/xchecker-runner/src/: error.rs  lib.rs  ndjson.rs  ring_buffer.rs  types.rs
crates/xchecker-runner/src/claude/: detect.rs  exec.rs  io.rs  mod.rs  native_cmd.rs  types.rs  version.rs  wsl.rs
crates/xchecker-runner/src/claude/platform/: mod.rs
crates/xchecker-selectors/: Cargo.toml
crates/xchecker-selectors/src/: lib.rs
crates/xchecker-status/: Cargo.toml
crates/xchecker-status/src/: lib.rs  status.rs
crates/xchecker-templates/: Cargo.toml
crates/xchecker-templates/src/: lib.rs
crates/xchecker-tui/: Cargo.toml
crates/xchecker-tui/src/: lib.rs
crates/xchecker-utils/: Cargo.toml
crates/xchecker-utils/src/: atomic_write.rs  cache.rs  canonicalization.rs  error.rs  exit_codes.rs  lib.rs  lock.rs  logging.rs  paths.rs  process_memory.rs  redaction.rs  ring_buffer.rs  runner.rs  source.rs  spec_id.rs  test_support.rs  types.rs
crates/xchecker-utils/src/runner/: command_spec.rs  native.rs  ndjson.rs  process.rs  wsl.rs
crates/xchecker-utils/src/runner/claude/: detect.rs  exec.rs  io.rs  mod.rs  native_cmd.rs  version.rs  wsl.rs
crates/xchecker-utils/src/runner/claude/platform/: mod.rs  unix.rs  windows.rs  windows_job.rs
crates/xchecker-validation/: Cargo.toml
crates/xchecker-validation/src/: lib.rs
crates/xchecker-workspace/: Cargo.toml
crates/xchecker-workspace/src/: lib.rs
docs/: CI_PROFILES.md  CLAUDE_CODE_INTEGRATION.md  CONFIGURATION.md  CONTRACTS.md  DEBUGGING_GUIDE.md  DEPENDENCY_MANAGEMENT.md  DEVELOPER_NOTES.md  DOCTOR.md  INDEX.md  LLM_PROVIDERS.md  ORCHESTRATOR.md  REQUIREMENTS_RUNTIME_V1.md  SECURITY.md  SECURITY_GATE_REVIEW.md  STRUCTURED_LOGGING.md  TESTING.md  TEST_MATRIX.md  WALKTHROUGH_20_MINUTES.md  WORKSPACE_GUIDE.md  claude-stub.md
examples/: embed_requirements.rs
plans/: modularization-report.md  srp-microcrate-analysis.md  xchecker-completion-plan.md  xchecker-runner-fix-plan.md
schemas/: receipt.v1.json  status.v1.json
scripts/: install.ps1  install.sh  test-dependency-guardrails.sh  verify-modularization.ps1  verify-modularization.sh
src/: artifact.rs  benchmark.rs  canonicalization.rs  claude.rs  (+30 more)
(+196 files in other folders)
