[package]
name = "xchecker"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
description = "Spec pipeline with receipts and gateable JSON contracts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/xchecker"
homepage = "https://github.com/EffortlessMetrics/xchecker"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "spec", "requirements", "workflow", "automation"]
exclude = [
    ".xchecker/",
    ".kiro/",
    ".github/",
    ".vscode/",
]

[features]
test-utils = ["dep:strum"]
# Legacy Claude wrapper module - will be removed in V19+
legacy_claude = []
# Enables dev/test utilities like claude-stub binary (not installed via `cargo install xchecker`)
dev-tools = []

[lib]
name = "xchecker"
path = "src/lib.rs"

[[bin]]
name = "xchecker"
path = "src/main.rs"

[[bin]]
name = "claude-stub"
path = "src/bin/claude-stub.rs"
required-features = ["dev-tools"]

[[bin]]
name = "regenerate_examples"
path = "src/bin/regenerate_examples.rs"
required-features = ["dev-tools"]

[[bin]]
name = "regenerate_secret_patterns_docs"
path = "src/bin/regenerate_secret_patterns_docs.rs"
required-features = ["dev-tools"]

[[test]]
name = "claude_stub_cli"
path = "tests/dev_tools/claude_stub_cli.rs"
required-features = ["dev-tools"]

[[test]]
name = "doc_validation"
path = "tests/test_doc_validation.rs"
required-features = ["dev-tools"]

[dependencies]
# Security-Critical Dependencies (keep exact patch versions)
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
blake3 = { version = "1.8.2", features = ["rayon"] }

# Core Infrastructure Dependencies (coarse minima)
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tempfile = "3.23.0"

# Other Dependencies (coarse minima)
async-trait = "0.1.89"
camino = "1.2.2"
toml = "0.9.8"
globset = "0.4.18"
fd-lock = "4.0.4"
serde_json_canonicalizer = "0.3.1"
regex = "1.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
sysinfo = "0.37.2"
which = "8.0.0"
unicode-normalization = "0.1.25"
strum = { version = "0.27.2", features = ["derive"], optional = true }
ratatui = "0.29.0"
crossterm = "0.29.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

[target.'cfg(unix)'.dependencies]
# Platform Dependencies (coarse minima)
libc = "0.2.178"
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
# Platform Dependencies (coarse minima)
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "handleapi", "psapi", "jobapi2"] }
dunce = "1.0.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
]

[dev-dependencies]
# Dev Dependencies (coarse minima)
proptest = "1.9.0"
serial_test = "3.2.0"
jsonschema = "0.37.4"
pulldown-cmark = "0.13.0"
shell-words = "1.1.1"
assert_cmd = "2.1.1"
predicates = "3.1.3"
xchecker = { path = ".", features = ["test-utils", "legacy_claude", "dev-tools"] }