[workspace]
members = [
    ".",
    "crates/xchecker-utils",
    "crates/xchecker-config",
    "crates/xchecker-llm",
    "crates/xchecker-engine",
]

[workspace.dependencies]
# Security-Critical Dependencies (pinned with = for exact versions)
reqwest = { version = "=0.13.1", features = ["json", "rustls"], default-features = false }
tokio = { version = "=1.49.0", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
blake3 = { version = "=1.8.3", features = ["rayon"] }

# Core Infrastructure Dependencies (coarse minima)
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tempfile = "3.24.0"

# Other Dependencies (coarse minima)
async-trait = "0.1.89"
camino = "1.2.2"
toml = "0.9.8"
globset = "0.4.18"
fd-lock = "4.0.4"
serde_json_canonicalizer = "0.3.1"
regex = "1.12.2"
chrono = { version = "0.4.43", features = ["serde"] }
once_cell = "1.21.3"
sysinfo = "0.37.2"
which = "8.0.0"
unicode-normalization = "0.1.25"
strum = { version = "0.27.2", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Platform Dependencies (coarse minima)
libc = "0.2.180"
nix = { version = "0.30.1", features = ["signal", "process"] }
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "handleapi", "psapi", "jobapi2"] }
dunce = "1.0.5"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

# Dev/Test Dependencies
proptest = "1.9.0"

[package]
name = "xchecker"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
description = "Spec pipeline with receipts and gateable JSON contracts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/xchecker"
homepage = "https://github.com/EffortlessMetrics/xchecker"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "spec", "requirements", "workflow", "automation"]
exclude = [
    ".xchecker/",
    ".kiro/",
    ".github/",
    ".vscode/",
]

[features]
test-utils = ["xchecker-utils/test-utils", "xchecker-engine/test-utils"]
# Legacy Claude wrapper module - will be removed in V19+
legacy_claude = ["xchecker-engine/legacy_claude"]
# Enables dev/test utilities like claude-stub binary (not installed via `cargo install xchecker`)
dev-tools = ["xchecker-utils/dev-tools"]

[lib]
name = "xchecker"
path = "src/lib.rs"

[[bin]]
name = "xchecker"
path = "src/main.rs"

[[bin]]
name = "claude-stub"
path = "src/bin/claude-stub.rs"
required-features = ["dev-tools"]

[[bin]]
name = "regenerate_examples"
path = "src/bin/regenerate_examples.rs"
required-features = ["dev-tools"]

[[bin]]
name = "regenerate_secret_patterns_docs"
path = "src/bin/regenerate_secret_patterns_docs.rs"
required-features = ["dev-tools"]

[[test]]
name = "claude_stub_cli"
path = "tests/dev_tools/claude_stub_cli.rs"
required-features = ["dev-tools"]

[[test]]
name = "doc_validation"
path = "tests/test_doc_validation.rs"
required-features = ["dev-tools"]

[dependencies]
# Internal crates
xchecker-utils = { path = "crates/xchecker-utils" }
xchecker-config = { path = "crates/xchecker-config" }
xchecker-llm = { path = "crates/xchecker-llm" }
xchecker-engine = { path = "crates/xchecker-engine" }

reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }
fd-lock = { workspace = true }
serde_json_canonicalizer = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
which = { workspace = true }
unicode-normalization = { workspace = true }
strum = { workspace = true, optional = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_yaml = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Platform Dependencies (coarse minima)
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Platform Dependencies (coarse minima)
winapi = { workspace = true }
dunce = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true

[dev-dependencies]
# Dev Dependencies (coarse minima)
xchecker-utils = { path = "crates/xchecker-utils", features = ["test-utils"] }
proptest = { workspace = true }
serial_test = "3.3.1"
jsonschema = "0.39.0"
pulldown-cmark = "0.13.0"
shell-words = "1.1.1"
assert_cmd = "2.1.2"
predicates = "3.1.3"
