[package]
name = "xchecker-doctor"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[features]
test-utils = ["dep:strum"]

[dependencies]
xchecker-utils = { path = "../xchecker-utils" }
xchecker-config = { path = "../xchecker-config" }
anyhow = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
strum = { workspace = true, optional = true }
