[package]
name = "xchecker-doctor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Environment health checks and diagnostics for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
test-utils = ["dep:strum"]

[dependencies]
xchecker-utils = { workspace = true }
xchecker-config = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
strum = { workspace = true, optional = true }
