[package]
name = "xchecker-engine"
version = "1.0.0"
edition = "2024"
publish = false

[features]
test-utils = ["dep:strum"]
legacy_claude = []

[dependencies]
xchecker-utils = { path = "../xchecker-utils" }
xchecker-config = { path = "../xchecker-config" }
xchecker-llm = { path = "../xchecker-llm" }
anyhow = "1.0.100"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"
blake3 = { version = "=1.8.2", features = ["rayon"] }
serde_json_canonicalizer = "0.3.1"
tokio = { version = "=1.49.0", features = ["full"] }
camino = "1.2.2"
globset = "0.4.18"
regex = "1.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
tempfile = "3.23.0"
which = "8.0.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
tracing = "0.1.43"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"], optional = true }

[dev-dependencies]
toml = "0.9.8"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
