[package]
name = "xchecker-engine"
version = "1.0.0"
edition = "2024"
publish = false

[features]
test-utils = ["dep:strum"]
legacy_claude = []

[dependencies]
xchecker-utils = { path = "../xchecker-utils" }
xchecker-config = { path = "../xchecker-config" }
xchecker-llm = { path = "../xchecker-llm" }
xchecker-redaction = { path = "../xchecker-redaction" }
xchecker-runner = { path = "../xchecker-runner" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
serde_json_canonicalizer = { workspace = true }
tokio = { workspace = true }
camino = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
strum = { workspace = true, optional = true }

[dev-dependencies]
xchecker-utils = { path = "../xchecker-utils", features = ["test-utils"] }
toml = { workspace = true }

[target.'cfg(windows)'.dependencies]
dunce = { workspace = true }
