[package]
name = "xchecker-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core orchestration engine for xchecker phase execution"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
test-utils = ["dep:strum"]
legacy_claude = []

[dependencies]
xchecker-utils = { workspace = true }
xchecker-config = { workspace = true }
xchecker-llm = { workspace = true }
xchecker-redaction = { workspace = true }
xchecker-runner = { workspace = true }
xchecker-packet = { workspace = true }
xchecker-receipt = { workspace = true }
xchecker-status = { workspace = true }
xchecker-templates = { workspace = true }
xchecker-doctor = { workspace = true }
xchecker-benchmark = { workspace = true }
xchecker-validation = { workspace = true }
xchecker-extraction = { workspace = true }
xchecker-hooks = { workspace = true }
xchecker-workspace = { workspace = true }
xchecker-gate = { workspace = true }
xchecker-fixup-model = { workspace = true }
xchecker-phases = { workspace = true }
xchecker-phase-api = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
serde_json_canonicalizer = { workspace = true }
tokio = { workspace = true }
camino = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
strum = { workspace = true, optional = true }

[dev-dependencies]
xchecker-utils = { workspace = true, features = ["test-utils"] }
toml = { workspace = true }

[target.'cfg(windows)'.dependencies]
dunce = { workspace = true }
