[package]
name = "xchecker-error-reporter"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
description = "Error reporting utilities for xchecker"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/xchecker"
homepage = "https://github.com/EffortlessMetrics/xchecker"
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Internal dependencies
xchecker-utils = { path = "../xchecker-utils" }
xchecker-redaction = { path = "../xchecker-redaction", version = "1.0.0" }

# External dependencies
tracing = { workspace = true }

[dev-dependencies]
# For testing
xchecker-utils = { path = "../xchecker-utils", features = ["test-utils"] }
