[package]
name = "xchecker-error-reporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Human-friendly error reporting for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal dependencies
xchecker-utils = { workspace = true }
xchecker-redaction = { workspace = true }

# External dependencies
tracing = { workspace = true }

[dev-dependencies]
# For testing
xchecker-utils = { workspace = true, features = ["test-utils"] }
