[package]
name = "xchecker-fixup-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fixup model types for spec generation workflows"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# No external dependencies - this is a pure types crate
