[package]
name = "xchecker-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1"
chrono = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
toml = "0.8"

xchecker-utils = { path = "../xchecker-utils" }
xchecker-receipt = { path = "../xchecker-receipt" }

[dev-dependencies]
tempfile = "3.10"
