[package]
name = "xchecker-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Policy gate evaluation for xchecker CI/CD pipelines"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
toml = { workspace = true }

xchecker-utils = { workspace = true }
xchecker-receipt = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3.3.1"
