[package]
name = "xchecker-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pre/post-phase hook execution for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
xchecker-utils = { workspace = true }
xchecker-config = { workspace = true }
xchecker-runner = { workspace = true }
xchecker-redaction = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
