[package]
name = "xchecker-llm"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
xchecker-utils = { path = "../xchecker-utils" }
xchecker-runner = { path = "../xchecker-runner", version = "1.0.0" }
xchecker-config = { path = "../xchecker-config" }
xchecker-error-redaction = { path = "../xchecker-error-redaction" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
xchecker-config = { path = "../xchecker-config", features = ["test-utils"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
