[package]
name = "xchecker-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LLM provider backends for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
xchecker-utils = { workspace = true }
xchecker-runner = { workspace = true }
xchecker-config = { workspace = true }
xchecker-error-redaction = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
xchecker-config = { workspace = true, features = ["test-utils"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
