[package]
name = "xchecker-lock"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
publish = false

[features]
test-utils = []

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fd-lock = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }
