[package]
name = "xchecker-lock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "File locking for concurrent xchecker executions"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
test-utils = []

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fd-lock = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }
