[package]
name = "xchecker-packet"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
xchecker-utils = { path = "../xchecker-utils" }
xchecker-config = { path = "../xchecker-config" }
xchecker-redaction = { path = "../xchecker-redaction", version = "1.0.0" }
anyhow = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
globset = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
xchecker-utils = { path = "../xchecker-utils", features = ["test-utils"] }
tempfile = { workspace = true }
