[package]
name = "xchecker-packet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Packet building with budget enforcement for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
xchecker-utils = { workspace = true }
xchecker-config = { workspace = true }
xchecker-redaction = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
globset = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
xchecker-utils = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
